<?xml version="1.0"?>
<package format="2">
  <name>mdek_driver</name>
  <version>0.0.0</version>
  <description>The mdek_driver package</description>
  <maintainer email="bstarbuck3@gatech.edu">bryan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
 
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
